--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultoria Financeira</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #f5f5f5; margin: 0; padding: 20px; }
-        .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1); }
-        h1 { color: #333; }
-        p { color: #666; }
-        form { margin-top: 20px; }
-        input, textarea, button { width: 100%; padding: 10px; margin-top: 10px; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #007bff; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
-    </style>
+    <title>Minha Consultoria Financeira</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Consultoria Financeira</h1>
-        <p>Quer melhorar sua vida financeira? Preencha o formulário abaixo e entraremos em contato!</p>
-        
-        <form action="https://formspree.io/f/seu-endereco-aqui" method="POST">
-            <input type="text" name="name" placeholder="Seu Nome" required>
-            <input type="email" name="email" placeholder="Seu E-mail" required>
-            <input type="tel" name="telefone" placeholder="Seu WhatsApp">
-            <textarea name="mensagem" placeholder="Como podemos te ajudar?" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
-    </div>
+    <h1>Bem-vindo à minha consultoria financeira!</h1>
+    <p>Deixe seus dados abaixo para saber mais.</p>
+
+    <form action="https://formsubmit.co/seu-email" method="POST">
+        <label>Nome:</label>
+        <input type="text" name="nome" required><br><br>
+
+        <label>Email:</label>
+        <input type="email" name="email" required><br><br>
+
+        <label>Qual seu maior interesse?</label>
+        <select name="interesse">
+            <option>Investimentos</option>
+            <option>Planejamento Financeiro</option>
+            <option>Consultoria Completa</option>
+        </select><br><br>
+
+        <button type="submit">Enviar</button>
+    </form>
 </body>
 </html>
