--- a/index.html
+++ b/index.html
@@ -3,117 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultoria Financeira | Seu Portfólio</title>
+    <title>Seu Portfólio - Consultoria Financeira</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #0a2540, #532a7a);
-            color: #ffffff;
+            box-sizing: border-box;
         }
-        .container {
-            width: 80%;
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-        }
+
         header {
+            background-color: #001f3d; /* Azul escuro */
+            color: white;
             text-align: center;
             padding: 50px 20px;
         }
+
         .section {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 40px;
-            margin: 20px 0;
-            border-radius: 10px;
+            padding: 40px 20px;
+            text-align: center;
         }
+
         .section h2 {
-            color: #ffcc00;
+            font-size: 2.5em;
+            color: #001f3d;
+            margin-bottom: 20px;
         }
-        .grid {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
+
+        .section p {
+            font-size: 1.2em;
+            color: #444;
+            line-height: 1.6;
+            margin-bottom: 30px;
         }
-        .grid-item {
-            flex: 1;
-            min-width: 300px;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-        img {
-            width: 100%;
-            border-radius: 10px;
-        }
-        .cta {
-            text-align: center;
-            margin-top: 40px;
-        }
-        .cta a {
-            background: #ffcc00;
-            color: #0a2540;
+
+        .button {
+            background-color: #6a1b9a; /* Roxo */
+            color: white;
             padding: 15px 30px;
             text-decoration: none;
-            font-weight: bold;
             border-radius: 5px;
+            font-size: 1.2em;
+            text-transform: uppercase;
+            font-weight: bold;
             display: inline-block;
+            transition: background-color 0.3s;
         }
-        .cta a:hover {
-            background: #ff9900;
+
+        .button:hover {
+            background-color: #9c4dcc;
+        }
+
+        .service-item {
+            display: inline-block;
+            width: 45%;
+            margin: 20px;
+            vertical-align: top;
+            text-align: left;
+        }
+
+        .service-item h3 {
+            color: #6a1b9a;
+            font-size: 1.8em;
+        }
+
+        .service-item p {
+            font-size: 1em;
+            color: #444;
+            margin-bottom: 15px;
+        }
+
+        .services-container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Consultoria Financeira Personalizada</h1>
-        <p>Organize suas finanças, invista com segurança e aumente seu patrimônio com uma estratégia eficiente.</p>
-    </header>
-    
-    <div class="container">
-        <div class="section">
-            <h2>Como Funciona?</h2>
-            <div class="grid">
-                <div class="grid-item">
-                    <h3>📊 Diagnóstico Financeiro</h3>
-                    <p>Analisamos sua renda, despesas e investimentos para mapear sua situação financeira.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>📈 Planejamento Patrimonial</h3>
-                    <p>Estruturamos seus ativos e passivos para um crescimento seguro e sustentável.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>💰 Planejamento Orçamentário</h3>
-                    <p>Monitoramos receitas e despesas para que você alcance seus objetivos financeiros.</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="section">
-            <h2>Estratégias de Investimentos</h2>
-            <div class="grid">
-                <div class="grid-item">
-                    <h3>🧐 Asset Allocation</h3>
-                    <p>Definimos a melhor distribuição dos seus investimentos para equilibrar risco e retorno.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>🔄 Rebalanceamento</h3>
-                    <p>Ajustamos sua carteira de investimentos conforme as mudanças do mercado.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>📌 Seleção de Ações</h3>
-                    <p>Identificamos as melhores oportunidades de ações para maximizar seus rendimentos.</p>
-                </div>
+    <!-- Header Section -->
+    <header>
+        <h1>Bem-vindo à Seu Portfólio</h1>
+        <p>A consultoria financeira ideal para quem deseja organizar finanças, investir com segurança e aumentar seu patrimônio.</p>
+        <a href="#agendar" class="button">Quero Agendar</a>
+    </header>
+
+    <!-- Nossos Serviços -->
+    <section class="section" id="servicos">
+        <h2>Nossos Serviços</h2>
+        <div class="services-container">
+            <div class="service-item">
+                <h3>Diagnóstico Financeiro</h3>
+                <p>Analisamos sua renda, despesas e investimentos para mapear sua situação financeira atual e compreender seus objetivos.</p>
+            </div>
+            <div class="service-item">
+                <h3>Planejamento Patrimonial</h3>
+                <p>Elaboramos um planejamento que abrange sua estrutura patrimonial, otimizando e crescendo seu patrimônio ao longo do tempo.</p>
+            </div>
+            <div class="service-item">
+                <h3>Planejamento Orçamentário</h3>
+                <p>Realizamos controle detalhado do orçamento, monitorando receitas e despesas, estabelecendo metas de economia alinhadas com seus objetivos.</p>
+            </div>
+            <div class="service-item">
+                <h3>Alocação de Ativos</h3>
+                <p>Desenvolvemos uma estratégia personalizada de alocação de ativos, visando maximizar retornos e minimizar riscos, conforme seu perfil.</p>
             </div>
         </div>
-    
-        <div class="cta">
-            <h2>Quer uma consultoria personalizada?</h2>
-            <p>Cadastre-se abaixo para receber mais informações.</p>
-            <a href="#">Cadastrar Interesse</a>
-        </div>
-    </div>
+        <a href="#agendar" class="button">Quero Agendar</a>
+    </section>
+
+    <!-- Por que escolher a Seu Portfólio? -->
+    <section class="section" id="porque-escolher">
+        <h2>Por que Escolher a Seu Portfólio?</h2>
+        <p>Oferecemos uma abordagem integrada, utilizando ferramentas avançadas para fornecer um serviço completo e personalizado, visando o seu sucesso financeiro. Com nossa equipe especializada, você terá total confiança nas soluções que oferecemos.</p>
+        <a href="#agendar" class="button">Quero Agendar</a>
+    </section>
+
 </body>
 </html>
