--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
 
     <!-- Header Section -->
     <header>
-        <h1>Bem-vindo à Seu Portfólio</h1>
-        <p>A consultoria financeira ideal para quem deseja organizar finanças, investir com segurança e aumentar seu patrimônio.</p>
-        <a href="#formulario" class="button">Quero Agendar</a>
+        <h1>Seu Portfólio</h1>
+        <p>A consultoria financeira personalizada ideal para quem deseja organizar finanças, investir da maneira correta e aumentar seu patrimônio.</p>
+        <a href="#formulario" class="button">Quero Agendar Minha Consultoria</a>
     </header>
 
-    <!-- Nossos Serviços -->
+    <!-- O que a Consultoria oferece? -->
     <section class="section" id="servicos">
-        <h2>Nossos Serviços</h2>
+        <h2>O que a Consultoria oferece?</h2>
         <div class="services-container">
             <div class="service-item">
                 <h3>Diagnóstico Financeiro</h3>
