--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     <!-- Header Section -->
     <header>
         <h1>Seu Portfólio</h1>
-        <p>A consultoria financeira personalizada ideal para quem deseja organizar finanças, investir da maneira correta e aumentar seu patrimônio.</p>
-        <a href="#formulario" class="button">Quero Agendar Minha Consultoria</a>
+        <p>A consultoria financeira personalizada ideal para quem deseja organizar suas finanças, investir com estratégia e aumentar o patrimônio.</p>
+        <a href="#formulario" class="button">Quero Agendar</a>
     </header>
 
     <!-- O que a Consultoria oferece? -->
@@ -151,10 +151,14 @@
             </div>
             <div class="service-item">
                 <h3>Alocação de Ativos</h3>
-                <p>Desenvolvemos uma estratégia personalizada de alocação de ativos, visando maximizar retornos e minimizar riscos, conforme seu perfil.</p>
+                <p>Desenvolvemos uma estratégia personalizada de alocação de ativos, definindo a distribuição ideal dos investimentos conforme seu perfil e metas, visando maximizar retornos e minimizar riscos.</p>
+            </div>
+             <div class="service-item">
+                <h3>Rebalanceamento do Portfólio de Investimentos</h3>
+                <p>Periodicamente, ocorre o ajuste do portfólio de investimentos, garantindo que a alocação de ativos permaneça alinhada com a estratégia estabelecida, adaptando-se às mudanças do mercado e às suas necessidades.</p>
             </div>
         </div>
-        <a href="#formulario" class="button">Quero Agendar</a>
+        <a href="#formulario" class="button">Quero Investir com Estratégia</a>
     </section>
 
     <!-- Por que escolher a Seu Portfólio? -->
