--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             </div>
              <div class="service-item">
                 <h3>Rebalanceamento do Portfólio de Investimentos</h3>
-                <p>Periodicamente, ocorre o ajuste do portfólio de investimentos, garantindo que a alocação de ativos permaneça alinhada com a estratégia estabelecida, adaptando-se às mudanças do mercado e às suas necessidades.</p>
+                <p>Periodicamente, ocorre o ajuste do portfólio de investimentos, garantindo que a alocação de ativos permaneça alinhada com a estratégia estabelecida, adaptando-se às mudanças do mercado e às suas necessidades.
+                </p>
             </div>
         </div>
         <a href="#formulario" class="button">Quero Investir com Estratégia</a>
