--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <!-- Por que escolher a Seu Portfólio? -->
     <section class="section" id="porque-escolher">
         <h2>Por que escolher a Seu Portfólio?</h2>
-        <p>Com expertise e estratégia, nossa consultoria proporciona soluções personalizadas para otimizar seus investimentos e garantir um futuro financeiro sólido.</p>
+        <p>Com expertise e estratégia, a consultoria proporciona soluções personalizadas para otimizar seus investimentos e garantir um futuro financeiro sólido.</p>
         <div class="services-container">
             <div class="service-item">
-                <h3>Plataforma Meu Vista</h3>
-                <p>A Meu Vista oferece tecnologia avançada para monitoramento de investimentos, proporcionando maior transparência, controle e eficiência na gestão da sua carteira.</p>
+                <h3>Tecnologia e Integrações Bancárias</h3>
+                <p>Ferramentas avançadas que permitem a integração direta com instituições financeiras, facilitando a gestão de orçamentos e investimentos de forma automatizada e segura.</p>
             </div>
             <div class="service-item">
                 <h3>Atendimento Personalizado</h3>
@@ -177,7 +177,7 @@
             </div>
             <div class="service-item">
                 <h3>Metodologia Estratégica</h3>
-                <p>Utilizamos as melhores práticas do mercado para potencializar seus rendimentos, sempre focando na diversificação e na mitigação de riscos.</p>
+                <p>As melhores práticas do mercado são utilizadas para potencializar seus rendimentos, sempre focando na diversificação e na mitigação de riscos.</p>
             </div>
             <div class="service-item">
                 <h3>Gestão de Risco Inteligente</h3>
