--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </section>
 
     <!-- Formulário de Contato -->
-   <section class="form-section" id="formulario">
+<section class="form-section" id="formulario">
     <h2>Fale Conosco</h2>
     <p>Preencha o formulário abaixo e entraremos em contato para entender suas necessidades financeiras.</p>
     <form>
@@ -221,3 +221,49 @@
 
 </body>
 </html>
+
+<style>
+    /* Ajustes no estilo do formulário */
+    .form-section form {
+        display: inline-block;
+        max-width: 500px;
+        text-align: left;
+        background-color: white;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
+    }
+
+    .form-section label {
+        display: block;
+        font-size: 1.1em;
+        margin: 15px 0 5px;
+        color: #333;
+    }
+
+    .form-section input, 
+    .form-section select, 
+    .form-section button {
+        width: 100%;
+        padding: 12px;
+        margin: 10px 0;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        font-size: 1.1em;
+    }
+
+    .form-section button {
+        background-color: #6a1b9a;
+        color: white;
+        font-size: 1.2em;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .form-section button:hover {
+        background-color: #9c4dcc;
+    }
+</style>
