--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
             <option value="acima_15mil">Acima de 15 mil</option>
         </select>
 
-        <label for="conhecimento">Nível de Conhecimento em Finanças e Investimentos</label>
+        <label for="conhecimento">Nível de Conhecimento no Mercado Financeiro</label>
         <select id="conhecimento" name="conhecimento" required>
             <option value="iniciante">Iniciante</option>
             <option value="intermediario">Intermediário</option>
             <option value="avancado">Avançado</option>
         </select>
 
-        <button type="submit">Quero uma Análise Personalizada</button>
+        <button type="submit">Quero Agendar uma Análise</button>
     </form>
 </section>
 
