--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <section class="form-section" id="formulario">
     <h2>Fale Conosco</h2>
     <p>Preencha o formulário abaixo e entraremos em contato para entender suas necessidades financeiras.</p>
-    <form>
+    <form action="https://formspree.io/f/myzeewyq" method="POST">
         <label for="nome">Nome</label>
         <input type="text" id="nome" name="nome" required>
         
