--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
             </div>
             <div class="service-item">
                 <h3>Planejamento Patrimonial</h3>
-                <p>Elaboramos um planejamento que abrange sua estrutura patrimonial, otimizando e crescendo seu patrimônio ao longo do tempo.</p>
+                <p>Desenvolvemos uma estratégia personalizada para estruturar, proteger e expandir seu patrimônio, garantindo crescimento sustentável e alinhado aos seus objetivos financeiros.</p>
             </div>
             <div class="service-item">
                 <h3>Planejamento Orçamentário</h3>
-                <p>Realizamos controle detalhado do orçamento, monitorando receitas e despesas, estabelecendo metas de economia alinhadas com seus objetivos.</p>
+                <p>Realizamos controle detalhado do orçamento, monitorando receitas e despesas com precisão e definindo metas de economia que impulsionam seu crescimento financeiro.</p>
             </div>
             <div class="service-item">
                 <h3>Alocação de Ativos</h3>
@@ -177,11 +177,11 @@
             </div>
             <div class="service-item">
                 <h3>Metodologia Estratégica</h3>
-                <p>As melhores práticas do mercado são utilizadas para potencializar seus rendimentos, sempre focando na diversificação e na mitigação de riscos.</p>
+                <p>Aplicamos uma abordagem baseada em análise de mercado e tendências econômicas para estruturar investimentos sólidos, equilibrando crescimento e segurança.</p>
             </div>
             <div class="service-item">
                 <h3>Gestão de Risco Inteligente</h3>
-                <p>Implementação de estratégias de proteção para minimizar impactos financeiros negativos e maximizar retornos ao longo do tempo.</p>
+                <p>Adotamos mecanismos avançados de proteção, como alocação estratégica e hedge, para reduzir a volatilidade e garantir a preservação do patrimônio ao longo do tempo.</p>
             </div>
         </div>
         <a href="#formulario" class="button">Desbloqueie Seu Potencial Financeiro</a>
