--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="service-item">
                 <h3>Planejamento Patrimonial</h3>
-                <p>Desenvolvemos uma estratégia personalizada para estruturar, proteger e expandir seu patrimônio, garantindo crescimento sustentável e alinhado aos seus objetivos financeiros.</p>
+                <p>Elaboramos um planejamento que abrange estruturar, proteger e expandir seu patrimônio, garantindo crescimento sustentável e alinhado aos seus objetivos financeiros.</p>
             </div>
             <div class="service-item">
                 <h3>Planejamento Orçamentário</h3>
